# template-monorepo

./: .pre-commit-config.yaml  README.md
.github/workflows/: common.yaml  microservice2.yaml
.github/workflows/microservice1/: test.yaml
microservice1/: pyproject.toml
microservice1/app/: main.py
microservice2/: .gitignore  pyproject.toml
microservice2/app/: main.py  test_main.py
